add self made favicon.ico

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="trigger-icon" sizes="48x48" href="/favicon.ico">
   </head>
   <body>
     <div id="main"></div>
