global fonts; customize XAxis and YAxis; stylish Chart component

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="trigger-icon" sizes="48x48" href="/favicon.ico">
+    <style>
+      body {
+        font-family: Roboto, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="main"></div>
