--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="margin:0px;">
     <div id="main"></div>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
